objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Ext_Id__c</fullName>
        <description>Contact external Id for Copado ADD</description>
        <externalId>true</externalId>
        <label>Contact Ext Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Phone_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Phone ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),YEAR(TODAY())-YEAR(Birthdate),IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AnnualIncome__c</fullName>
        <description>Contact&apos;s Annual Income</description>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if the contact is authorized to initiate any change on Account.</description>
        <inlineHelpText>Specify if the contact is authorized to initiate any change on Account.</inlineHelpText>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactNumber__c</fullName>
        <description>External identifier of the contact or person.</description>
        <externalId>true</externalId>
        <label>Contact Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerSentiment__c</fullName>
        <description>Latest guess at this person&apos;s sentiment towards the deploying company with values such as Promoter, Satisfied, Neutral, Dissastisfied, Disgruntled.</description>
        <label>Customer Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Disgruntled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DaysSinceLastContact__c</fullName>
        <formula>IF( (TODAY() - vlocity_cmt__LastContactbyRecordOwner__c)&gt;0, (TODAY() - vlocity_cmt__LastContactbyRecordOwner__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DriversLicenseNumber__c</fullName>
        <description>The individual&apos;s driver&apos;s license number useful for credit checks.</description>
        <label>Driver&apos;s License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasFraud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the customer is involved in or experiencing fraudulent activity.</description>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Image__c</fullName>
        <description>A rich text area field that stores an image of this person. The image must be a .gif, .jpg or .png file and is limited to 1 MB in size. For more information about images stored in rich text area fields, see Editing Rich Text Are Fields in Records (https://help.salesforce.com/articleView?id=fields_using_rich_text_area.htm&amp;type=5).</description>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating whether the Contact is active or inactive without depending on the specific contact status. Vlocity logic determines whether this Contact should be considered active or inactive using this field. Typically inactive means the Contact will be filtered out of views and lists.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the contact is a partner</description>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastContactbyRecordOwner__c</fullName>
        <label>Last Contact by Record Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Location__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Occupation__c</fullName>
        <description>A description of the occupation of this individual--potentially helpful in determining the credit-worthiness of the individual.</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One-to-One relationship to Party Object</description>
        <label>Party</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimaryEmployerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employer</description>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SocialSecurityNumber__c</fullName>
        <description>An 11-character encrypted text field useful for storing the tax identifier of this individual.</description>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateOfIssuance__c</fullName>
        <description>Used with Driver&apos;s License Number. Identifies the state or country that issued the specified driver&apos;s license number.</description>
        <label>State of Issuance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of this Contact such as active, inactive, expired or pending. Values can be customized by the deploying company. Custom logic should also set the IsActive__c field correspondingly; e.g. inactive, expired and pending may all translate to IsActive__c = False.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TaxId__c</fullName>
        <description>A 10-character identifier useful for storing a tax id separate from the social security number of this individual.</description>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>The type of individual. Most useful for partner employees tracked as contacts.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed Agent</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Associate Agent</fullName>
                </value>
                <value>
                    <fullName>Managing Agent</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Account Number</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserEmployeeNumber__c</fullName>
        <formula>vlocity_cmt__UserId__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserLeaseExpires__c</fullName>
        <description>The time that the users lease token was issued.</description>
        <label>UserLeaseExpiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserLeaseToken__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The session token that the user is going to get.</description>
        <label>UserLeaseToken</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UserName</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserPassSalt__c</fullName>
        <label>UserPassSalt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserPass__c</fullName>
        <label>UserPass</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WebSite__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneContact</fullName>
        <active>true</active>
        <label>MobilePhoneContact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EnforceSocialSecurityNumberlength</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__SocialSecurityNumber__c !=null &amp;&amp; LEN(vlocity_cmt__SocialSecurityNumber__c) != 9</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__SocialSecurityNumber__c</errorDisplayField>
        <errorMessage>Social Security Number is 9-digit number</errorMessage>
    </validationRules>
</CustomObject>